tests/param/error/range_index_bounds.ggt
setting symmetric.
problem_type decisional.

input
  [ 1
  , forall i in [i, l]: X^i ] @ 1.

challenge Y @ k.